[tool.poetry]
name = "simple-diffusion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "simple_diffusion"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
torchvision = "^0.14.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
